Fix #41: Pause/Resume clock in reponse to document visibility changes

--- a/src/main.css
+++ b/src/main.css
@@ -434,7 +434,7 @@ section.now {
         right: 0;
         height: 2px;
         background-color: var(--color-teal-100);
-        border-bottom: dashed 2px var(--color-mint-20);
+        border-bottom: dotted 1px var(--color-mint-20);
         opacity: 20%;
 
         z-index: 100;
